# QQBotForFun

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  TODO.md  _test_output.txt  _test_sim.txt  _tr.txt  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.codebuddy/rules/: CLI启动方式.mdc  CLI测试与QQBOT关系.mdc  aoe3-attack-data-design.mdc  server-ops.mdc
.cursor/rules/: aoe3-attack-data-design.mdc
config/: llm.yaml
data/aoe3/: icon_manifest.json  icon_overrides.json  manifest.json
data/ra2/: actors.json  classic_scenarios.json  icon_map.json  lineup_presets.json  locale_zh.json  locomotors.json  manifest.json  veterancy.json  weapons.json
docs/: 01-architecture.md  02-tech-stack.md  03-core-api.md  04-game-development.md  05-deployment.md  06-configuration.md  07-database-schema.md  08-llm-integration.md  09-conventions.md  10-roadmap.md  11-ui-style.md  12-local-testing.md  13-cli-bot-parity.md  aoe3-damagecap-audit.md  aoe3-data-errata.md  commands.md  free-llm-vendors.md  ops-guide.md  todo-aoe3-data-rebuild.md  todo-crawler-refactor.md
docs/adr/: 0001-protocol-choice.md  0002-framework-choice.md  0003-llm-gateway.md
docs/games/: README.md  aoe3-battle-state-machine.md  aoe3-battle.md  aoe3.md  ra2-battle.md  terra-survival-archive-v5.md  (+6 more)
migrations/: env.py
napcat/: config.example.json
scripts/: _quick_sweep.py  _validate_pool.py  _vendor_path.py  aoe3_battle_sim.py  aoe3_damagecap_audit.py  aoe3_named_attack_audit.py  aoe3_windup_research.py  benchmark_llm.py  compare_models.py  compress_aoe3_icons.py  compress_foods.py  debug_lcm.py  enrich_soup_facts.py  eval_judge_compare.py  eval_soup_judge.py  fix_aoe3_icons.py  generate_soup_with_llm.py  generate_trivia_bank.py  list_puzzles.py  play_cli.bat  play_cli.py  ra2_battle_bench.py  ra2_battle_sim.py  ra2_lineup_audit.py  ra2_preset_scan.py  seed_foods.py  seed_turtle_soup.py  setup_openra_vendor.ps1  test_bracket_stages.py  test_bracket_v3.py  test_finance_prompt.py  test_llm_judge.py  test_soup_variety.py  test_trivia_bank_acceptance.py  test_trivia_variety.py
seeds/: foods.json  turtle_soup.json  turtle_soup_facts.json
src/: bot.py  settings.py
tests/: conftest.py  test_reminder.py
(+1134 files in other folders)
