[project]
name = "qqbotforfun"
version = "0.1.0"
description = "A multi-game QQ group bot platform, powered by NoneBot2 + NapCat + LLM."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [
    { name = "owner" },
]

dependencies = [
    # Bot framework
    "nonebot2[fastapi,websockets]>=2.4.0",
    "nonebot-adapter-onebot>=2.4.0",
    "nonebot-plugin-apscheduler>=0.5.0",

    # Data
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",

    # LLM
    "openai>=1.40",

    # Config & utils
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "httpx>=0.27",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pillow>=10.0",          # 仅开发时用：压缩种子图（scripts/foods/*）
]

[project.scripts]
qqbot = "src.bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["migrations/versions", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "RUF",   # ruff-specific
    "ASYNC", # flake8-async
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI/Depends style)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------- Pytest ----------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "src"]
addopts = "-ra -q"

# ---------- Mypy ----------
[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = true
ignore_missing_imports = true
